default page spacing fix

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -54,10 +54,6 @@ body {
     & > * {
         flex: 0 0 auto;
     }
-    & > .container,
-    & > .bk-pt-default {
-        flex: 1 0 auto;
-    }
 }
 
 // Page Container
@@ -166,11 +162,6 @@ body {
 
 // #Default Page
 // -------------
-
-// Sticky Footer
-.bk-pt-default {
-    flex: 1;
-}
 
 .bk-pt-default .container {
     @media @tablet {
